<resources>
    <string name="app_name">Rank</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="social_login">Login with Social Accounts</string>
    <string name="new_member">New Member ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email ID</string>
    <string name="login">Login</string>
    <string name="send_email">Send Email</string>
    <string name="signup">SignUp</string>
    <string name="reset">Reset Your Password</string>
    <string name="enter_email">Enter your email address,and we\u0027ll send you a link so you can reset your password.</string>
    <string name="social_signup">SignUp with Social Accounts</string>
    <string name="message">"You are in a relationship to be happy , to smile, to laugh and to make good memories.Not to be constantly upset,to feel hurt,and to cry."</string>
    <string name="user_name">Mark Thompson</string>
    <string name="user_designation">Designer,Artist,Biker,They call me Jesus</string>
    <string name="user_post">We are enjoying the Bae party.</string>

    //
    <string name="txt_loading">Loading..</string>
    <string name="txt_ok">Ok</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_empty_username">Please enter username</string>
    <string name="txt_empty_password">Please enter password</string>
    <string name="no_network_connection">No Network Connection</string>
    <string name="check_connection">Please check your internet connection.</string>
</resources>
