<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rank.activity.ForgotPassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">
        <RelativeLayout
            android:id="@+id/rl_back"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp">
            <ImageView
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerInParent="true"
                android:background="@drawable/left_arrow"/>
        </RelativeLayout>
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/logo"
            android:layout_marginTop="@dimen/_50sdp"/>
        <TextView
            android:id="@+id/tv_reset"
            android:layout_below="@+id/iv_logo"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/reset"
            android:textSize="@dimen/_18sdp"/>
        <TextView
            android:id="@+id/tv_enterEmail"
            android:paddingLeft="@dimen/_25sdp"
            android:paddingRight="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/enter_email"
            android:textSize="@dimen/_12sdp"
            android:layout_below="@+id/tv_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <RelativeLayout
            android:id="@+id/rl_emailId"
            android:layout_below="@+id/tv_enterEmail"
            android:layout_width="@dimen/_245sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/textbox">
            <EditText
                android:layout_width="match_parent"
                android:textColorHint="@color/hint"
                android:layout_height="match_parent"
                android:background="@null"
                android:textSize="@dimen/_12sdp"
                android:hint="@string/email_id"
                android:gravity="center"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:singleLine="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_sendEmail"
            android:layout_below="@+id/rl_emailId"
            android:layout_width="@dimen/_245sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/send_email"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:gravity="center"/>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
