<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rank.activity.Login">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo"
        android:layout_marginTop="@dimen/_50sdp"/>
    <RelativeLayout
        android:id="@+id/rl_username"
        android:layout_below="@+id/iv_logo"
        android:layout_width="@dimen/_245sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/textbox">
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:textColorHint="@color/hint"

            android:layout_height="match_parent"
            android:background="@null"
            android:textSize="@dimen/_12sdp"
            android:hint="@string/username"
            android:gravity="center"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:singleLine="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_password"
        android:layout_below="@+id/rl_username"
        android:layout_width="@dimen/_245sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/textbox">
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:textColorHint="@color/hint"
            android:inputType="textPassword"

            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:singleLine="true"
            android:hint="@string/password"
            android:background="@null"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_loginButton"
        android:layout_below="@+id/rl_password"
        android:layout_width="@dimen/_245sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
       >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:id="@+id/tv_login"/>
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/rl_forgotPassword"
        android:layout_below="@+id/rl_loginButton"
        android:layout_width="@dimen/_145sdp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_height="@dimen/_35sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:text="@string/forgot_password"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_socialLogin"
        android:layout_below="@+id/rl_forgotPassword"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_25sdp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:text="@string/social_login"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_socialAccounts"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_below="@+id/rl_socialLogin"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_centerHorizontal="true">
        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/facebook"/>
        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerInParent="true"
            android:background="@drawable/twitter"/>
        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentRight="true"
            android:background="@drawable/google_plus"/>
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_below="@+id/rl_socialAccounts"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:id="@+id/rl_newMember"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/new_member"
                android:gravity="center"
                android:textSize="@dimen/_12sdp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_signUp"
            android:layout_toRightOf="@+id/rl_newMember"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text=" Sign Up"
                android:gravity="center"
                android:textColor="@color/link_orange"
                android:textSize="@dimen/_12sdp"/>
        </RelativeLayout>
    </RelativeLayout>
    
    




</RelativeLayout>

</RelativeLayout>
