<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rank.activity.SignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     >

       <RelativeLayout
           android:id="@+id/rl_back"
           android:layout_width="@dimen/_50sdp"
           android:layout_height="@dimen/_50sdp">
           <ImageView
               android:layout_width="@dimen/_28sdp"
               android:layout_height="@dimen/_30sdp"
               android:layout_centerInParent="true"
               android:background="@drawable/left_arrow"/>
       </RelativeLayout>
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/logo"
            android:layout_marginTop="@dimen/_80sdp"/>

        <RelativeLayout
            android:id="@+id/rl_firstName"
            android:layout_below="@+id/iv_logo"
            android:layout_width="@dimen/_245sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/textbox">
            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:textColorHint="@color/hint"
                android:maxLength="10"
                android:inputType="text"
                android:layout_height="match_parent"
                android:background="@null"
                android:textSize="@dimen/_12sdp"
                android:hint="@string/first_name"
                android:gravity="center"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:singleLine="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_lastName"
            android:layout_below="@+id/rl_firstName"
            android:layout_width="@dimen/_245sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/textbox">
            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:textColorHint="@color/hint"
                android:maxLength="10"
                android:inputType="text"
                android:layout_height="match_parent"
                android:background="@null"
                android:textSize="@dimen/_12sdp"
                android:hint="@string/last_name"
                android:gravity="center"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:singleLine="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_emailId"
            android:layout_below="@+id/rl_lastName"
            android:layout_width="@dimen/_245sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/textbox">
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:textColorHint="@color/hint"
                android:layout_height="match_parent"
                android:background="@null"
                android:textSize="@dimen/_12sdp"
                android:hint="@string/email_id"
                android:gravity="center"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:singleLine="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_below="@+id/rl_emailId"
            android:layout_width="@dimen/_245sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/textbox">
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:textColorHint="@color/hint"
                android:maxLength="10"
                android:layout_height="match_parent"
                android:background="@null"
                android:textSize="@dimen/_12sdp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:gravity="center"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:singleLine="true"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_dob"
            android:layout_below="@+id/rl_password"
            android:layout_width="@dimen/_245sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/textbox">
            <EditText
                android:id="@+id/etDob"
                android:layout_width="match_parent"
                android:textColorHint="@color/hint"
                android:layout_height="match_parent"
                android:background="@null"
                android:textSize="@dimen/_12sdp"
                android:hint="Date Of Birth"
                android:focusable="false"
                android:gravity="center"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:singleLine="true"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_who"
            android:layout_below="@+id/rl_dob"
            android:layout_width="@dimen/_245sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/textbox">
            <EditText
                android:id="@+id/etWhoAreYou"
                android:layout_width="match_parent"
                android:textColorHint="@color/hint"
                android:layout_height="match_parent"
                android:background="@null"
                android:textSize="@dimen/_12sdp"
                android:hint="Who are you?"
                android:gravity="center"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:singleLine="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_signupButton"
            android:layout_below="@+id/rl_who"
            android:layout_width="@dimen/_245sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button"
            >
            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sign_up"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:gravity="center"/>
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/rl_socialAccounts"
            android:layout_below="@+id/rl_signupButton"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_signup"
                android:textSize="@dimen/_12sdp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@+id/rl_socialAccounts"
            android:layout_width="@dimen/_120sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">
            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/facebook"/>
            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_centerInParent="true"
                android:background="@drawable/twitter"/>
            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_alignParentRight="true"
                android:background="@drawable/google_plus"/>
        </RelativeLayout>

    </RelativeLayout>
    </ScrollView>

</RelativeLayout>
